# barcos-nagoya

./: .black  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  Dockerfile  README.md
.github/workflows/: docker.yaml
barcos/: .envrc  .flake8  .tool-versions  pyproject.toml
barcos/src/: nagoya.py  portbury.py  run.py  sagunto.py  sheets.py  util.py
